--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,9 @@ body {
   /* background-color: greenyellow; */
   margin: 0; /* Remove default body margin */
   padding: 0; /* Remove default body padding */
-  background-image: url("/home/maneesh/Downloads/Typing.jpg"); /* Replace with the actual path to your image */
+  /* background-image: url("/home/maneesh/Downloads/Typing.jpg");  */
+  background-image:url("/React-typing-app-main/public/Typing.jpg")
+  /* Replace with the actual path to your image */
   background-size: cover;
   zoom: 75%;
 }
