--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   padding: 0; /* Remove default body padding */
   /* background-image: url("/home/maneesh/Downloads/Typing.jpg");  */
   /* background-image: url("/React-typing-app-main/public/Typing.jpg"); */
-  background-image: url("../../public/Typing.jpg");
+  background-image: url("../public/Typing.jpg");
 
   /* Replace with the actual path to your image */
   background-size: cover;
